<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PanindaPOS</string>
    <string name="register"><u>Register</u></string>
    <string name="login"><u>Log In</u></string>
    <string name="store_name">Store Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No.</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="logo_image">logo image</string>
    <string name="back2login"><u>Back To Login</u></string>

    <!-- Revenue period options -->
    <string-array name="revenue_period_options">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Quarterly</item>
        <item>Yearly</item>
    </string-array>

</resources>
