<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/IvoryWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <TextView
            android:id="@+id/tvAskLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="Have an account?"
            android:textSize="20sp"
            tools:fontFamily="@font/montserrat" />

        <TextView
            android:id="@+id/tvLoginLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/login"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/paninda_pos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo">

        <EditText
            android:id="@+id/tvEmail"
            android:layout_width="324dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@color/BG_White"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="text|textEmailAddress"
            android:paddingStart="5dp"
            android:textColorHint="@color/Dark_Blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.063"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="324dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@color/BG_White"
            android:drawableEnd="@drawable/ic_visibility_off"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColorHint="@color/Dark_Blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStoreName"
            app:layout_constraintVertical_bias="0.094" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="324dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@color/BG_White"
            android:drawableEnd="@drawable/ic_visibility_off"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColorHint="@color/Dark_Blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_constraintTop_toBottomOf="@id/etPassword" />

        <EditText
            android:id="@+id/tvStoreName"
            android:layout_width="324dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@color/BG_White"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:gravity="center_vertical"
            android:hint="@string/store_name"
            android:inputType="text"
            android:paddingStart="5dp"
            android:textColorHint="@color/Dark_Blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"
            app:layout_constraintVertical_bias="0.069"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="324dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@color/Dark_Blue"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/register"
            android:textColor="@color/BG_White"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>