<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/IvoryWhite"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="260dp"
        android:adjustViewBounds="true"
        android:src="@drawable/paninda_pos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLoginSection"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="324dp"
            android:layout_height="48dp"
            android:autofillHints=""
            android:background="@color/BG_White"
            android:drawableEnd="@drawable/ic_visibility_off"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="text|textPassword|textNoSuggestions"
            android:paddingStart="5dp"
            android:textColorHint="@color/Dark_Blue"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            app:layout_constraintVertical_bias="0.085"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="324dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:autofillHints=""
            android:background="@color/BG_White"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="text|textEmailAddress"
            android:paddingStart="5dp"
            android:textColorHint="@color/Dark_Blue"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="324dp"
            android:layout_height="48dp"
            android:background="@color/Dark_Blue"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/login"
            android:textColor="@color/IvoryWhite"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintVertical_bias="0.333" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clLoginSection">

        <TextView
            android:id="@+id/tvAskRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="No Account Yet?"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvRegisterLink2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/register"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>